--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -47,6 +47,7 @@ r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=0
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.MotionBlur=False
+r.DefaultFeature.AutoExposure=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
