Implements Main menu
- Choose a car to play in map

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprints/BP_VehicleGI.BP_VehicleGI_C
-GameDefaultMap=/Game/Maps/TestMap.TestMap
+GameDefaultMap=/Game/Maps/Menu_Map.Menu_Map
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/VehicleGameMode.VehicleGameMode_C
 GlobalDefaultServerGameMode=None
