--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/TestMap.TestMap
+EditorStartupMap=/Game/Maps/PhysicsTest_Map.PhysicsTest_Map
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
