Adds MultiplayerSessions plugin

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,6 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=A6CBD6DB42C8ED4295127294BE763114
+
+[/Script/Engine.GameSession]
+MaxPlayers=100
