Creates path finding algorithm
- Modify how the CalculateRandomNavMeshLocation task works, along with the
behavior tree, AiController and ResolveAiBehavior task

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,3 @@
-
-
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/PhysicsTest_Map.PhysicsTest_Map
 LocalMapOptions=
@@ -44,7 +42,6 @@ CompressionQualityModifier=1.000000
 AutoStreamingThreshold=0.000000
 SoundCueCookQualityIndex=-1
 
-
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
@@ -83,17 +80,18 @@ ManualIPAddress=
 
 [/Script/Engine.GameEngine]
 +NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
- 
+
 [OnlineSubsystem]
 DefaultPlatformService=Steam
- 
+
 [OnlineSubsystemSteam]
 bEnabled=true
 SteamDevAppId=480
- 
-; If using Sessions
 bInitServerOnClient=true
- 
+
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
-NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
+NetConnectionClassName=OnlineSubsystemSteam.SteamNetConnection
+
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Static
 
