Includes the RepairKit and MedKit on the Ai Controller Item list
- Now chases an item based on its priority. If health and armor is low,
medkits and repair kits are added to the item list and have a higher
priority
- Small adjustments

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -94,4 +94,5 @@ NetConnectionClassName=OnlineSubsystemSteam.SteamNetConnection
 
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Static
+AgentRadius=300.000000
 
